added function and styles for long text blocks hiding

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
 
+    <div class="hidden-text-block">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus repellendus consectetur iste optio velit consequuntur autem quo provident soluta eius, aut odit harum fugiat labore tenetur quas laudantium odio?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus repellendus consectetur iste optio velit consequuntur autem quo provident soluta eius, aut odit harum fugiat labore tenetur quas laudantium odio?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus repellendus consectetur iste optio velit consequuntur autem quo provident soluta eius, aut odit harum fugiat labore tenetur quas laudantium odio?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus repellendus consectetur iste optio velit consequuntur autem quo provident soluta eius, aut odit harum fugiat labore tenetur quas laudantium odio?
+          ?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea delectus repellendus consectetur iste optio velit consequuntur autem quo provident soluta eius, aut odit harum fugiat labore tenetur quas laudantium odio?
+        </p>
+      </div>
+
+<!-- 
     <div id="app">
         {{ message }}
     </div>
@@ -116,7 +128,7 @@
             <img class="image-contain" src="./assets/img/martian.png" alt="">
         </div>
     </div>
-</template>
+</template> -->
 
 </body>
 </html>
